--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cucumber-html-report",
-  "version": "0.5.9",
+  "version": "0.6.5",
   "description": "Convert cucumber json reports to a pretty html report.",
   "homepage": "https://github.com/leinonen/cucumber-html-report",
   "author": {
@@ -31,6 +31,7 @@
   "license": "MIT",
   "dependencies": {
     "atob": "^2.0.3",
+    "moment": "^2.19.0",
     "mustache": "^2.3.0",
     "object-assign": "^4.1.0",
     "ramda": "^0.23.0"
